src/test/ui/missing-items/missing-type-parameter.stderr
error[E0282]: type annotations needed
  --> $DIR/missing-type-parameter.rs:14:5
   |
LL |     foo(); //~ ERROR type annotations needed
   |     ^^^ cannot infer type for `X`

error: aborting due to previous error

